@@ -185,6 +185,8 @@ production.
 * (bug 32414) Empty page get a empty bytes attribute in Export/Dump.
 * (bug 33101) Viewing a User or User talk of username resembling IP ending
   with .xxx causes Internal error
+* Warning about undefined index in certain situations when $wgLogRestrictions
+  causes the first log type requested to be removed but not the others
 
 === API changes in 1.19 ===
 * (bug 19838) siprop=interwikimap can now use the interwiki cache.
